--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=6a227d14a36ff362d3d8
+github.client.secret=da4e660ab9eca20a348ef43bbdcff545d9462535
+github.redirect.uri=http://localhost:8887/callback
