--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8887
 github.client.id=6a227d14a36ff362d3d8
 github.client.secret=da4e660ab9eca20a348ef43bbdcff545d9462535
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
